--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <header>
+  <div class="container-fluid header">
     <div class="menu">
       <span class="title">Sunnyside</span>
 
@@ -32,9 +32,56 @@
       <h1>WE ARE CREATIVES</h1>
       <svg class="seta" width="36" height="114" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v100M3 95.484l15 15 15-15"/></g></svg>
     </div>
+  </div>
 
 
-  </header>
+  <div class="container-fluid quadrados">
+    <div class="row">
+      <div class="col-lg-6 texto">
+        <div class="conteudo">
+          <div class="slogan-2">
+            Transform your brand
+          </div>
+          <div class="paragrafo">
+            We are a full-service creative agency specializing 
+            in helping brands grow fast.Engage your clients through
+            compelling visuals that do most of the marketing for you.
+  
+          </div>
+  
+          <div class="learn">
+            <span>LEARN MORE</span>
+          </div>
+        </div>
+        </div>
+        
+      <div class="col-lg-6 foto" style="padding: 0;">
+         <img class="image" src="./design/images/desktop/image-transform.jpg" alt="">
+      </div>
+
+      <div class="col-lg-6 foto" style="padding: 0;">
+         <img class="image" src="./design/images/desktop/image-stand-out.jpg" alt="">
+      </div>
+
+      <div class="col-lg-6 texto">
+        <div class="conteudo">
+          <div class="slogan-2">
+            Stand out to the right audience
+          </div>
+          <div class="paragrafo">
+           using a collaborative formula of designers, reaserchers,
+           photographers, videographers, and copywriters, we'll build
+           and extend your brand in digital places.
+  
+          </div>
+  
+          <div class="learn">
+            <span>LEARN MORE</span>
+          </div>
+        </div>
+        </div>
+    </div>
+  </div>
 
 
 
