sessao grafico feito

--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -80,6 +80,21 @@
           </div>
         </div>
         </div>
+        <div class="col-lg-6 foto-cereja" style="padding: 0;">
+          <div class="graphic">Graphic Design</div>
+          <div class="graphic-text" >Great desing makes you merorable.We deliver
+            artwork that underscores your brand message and captures potencial clients' attention.
+          </div>
+       </div>
+ 
+       <div class="col-lg-6 foto-laranja" style="padding: 0;">
+        <div class="graphic" style="color: #15536e;">Photography</div>
+        <div class="graphic-text" style="color: #176586;" >Increase your credibility by getting the most 
+          stunning, high-quality phoyos that improve your business image.
+        </div>
+       </div>
+
+
     </div>
   </div>
 
